--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,6 @@ nav: [
   ['Who is it for?',                   'who-is-it-for'  ],
   ['How can mentors and POs Apply?',   'mentors-apply'  ],
   ['How can Students apply?',          'students-apply' ],
-  ['TimeLine',                         'timeline'       ],
+  ['Timeline',                         'timeline'       ],
   ['FAQ',                              'faq'            ],
 ]
